fix: font size and high contrast blue

--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -3,7 +3,7 @@
 }
 html {
   color: #222;
-  font: 16px/1.5 Verdana, Helvetica;
+  font: 18px/1.5 Verdana, Helvetica;
 }
 body {
   margin: 1rem auto;
@@ -12,7 +12,7 @@ body {
 }
 
 a {
-  color: #A1A1A1;
+  color: blue;
 }
 
 a.active {
@@ -159,13 +159,13 @@ form.add-item button {
   }
 
   form.add-item .item {
-    width: 60%;
+    width: 50%;
     float: left;
     margin: 0 2%;
   }
 
   form.add-item button {
-    width: 20%;
+    width: 30%;
     float: left;
     margin-top: 24px;
   }
@@ -223,7 +223,7 @@ form.add-item button {
 
 .signup-link {
   text-align: center;
-  border: 1px solid #A1A1A1;
+  border: 1px solid blue;
   border-radius: 5px;
   padding: 15px;
 }
@@ -249,8 +249,8 @@ form.add-item button {
   right: 15px;
 }
 .options button:hover {
-  border: 2px solid #A1A1A1;
-  color: #A1A1A1;
+  border: 2px solid blue;
+  color: blue;
 }
 
 .options button:not(:last-child) {
@@ -291,7 +291,7 @@ table td input {
 }
 
 .signout-container {
-  border-top: 1px solid #A1A1A1;
+  border-top: 1px solid #222;
   margin: 25px 0;
   padding: 15px 0;
   text-align: right;
@@ -313,14 +313,14 @@ button,
 }
 
 button.primary {
-  background-color: #A1A1A1;
+  background-color: blue;
   color: #fff;
-  border: 1px solid #A1A1A1;
+  border: 1px solid blue;
 }
 
 input,
 table {
-  border: 1px solid #A1A1A1;
+  border: 1px solid #222;
 }
 
 table {
@@ -335,11 +335,11 @@ table th:first-child{
 input:focus {
   border-color: transparent;
   outline: none;
-  box-shadow: 0 0 0 2px #A1A1A1;
+  box-shadow: 0 0 0 2px blue;
 }
 
 table {
-  border: 1px solid #A1A1A1;
+  border: 1px solid blue;
   margin-bottom: 15px;
 }
 
@@ -355,7 +355,7 @@ table td:first-child {
 }
 
 table td {
-  border: 1px solid #A1A1A1;
+  border: 1px solid #222;
 }
 
 table a {
